fixed the company name not visible in company products

--- a/themes/nab-amplify/assets/css/custom.css
+++ b/themes/nab-amplify/assets/css/custom.css
@@ -1376,6 +1376,7 @@ body .is_friend .remove::before{font-size:22px}
 .author-info .author-label{color:#999;font-family:proxima-nova, Arial, sans-serif;font-size:16px;margin-bottom:5px;display:block}
 .author-info .author-label a{color:#999}
 .author-info .author-label a:hover{text-decoration:underline}
+.post-action-wrap .post-action-author .no-image-avtar{color:#000}
 
 /* single post commnents */
 /*.comments-area{padding:30px 50px}
